商品分类页

--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -13,13 +13,14 @@
           </view>
       </scroll-view>
     <scroll-view class="main" scroll-y>
-      <view class="sub-category" wx:for="{{ activeAsideItem.children }}" >
+      <view class="sub-category" wx:for="{{ activeAsideItem.children }}" wx:key="cat_id">
         <view class="sub-category-title">{{ item.cat_name }}</view>
-        <!-- <view class="sub-category-goods">
-          <navigator>
-            <image ></image>
+        <view class="sub-category-goods">
+          <navigator wx:for="{{ item.children }}" wx:key="cat_id" wx:for-item="child">
+            <image src="{{ child.cat_icon }}" mode="widthFix"></image>
+            <text>{{ child.cat_name }}</text>
           </navigator>
-        </view> -->
+        </view>
       </view>
     </scroll-view>
   </view>
